--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkslateblue;
+    background-color: darkturquoise;
     color: white;
     font-family: 'Times New Roman', Times, serif;
     margin: 20px;
