--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,16 +10,18 @@ body {
 }
 
 header {
-    font-family: Arial, sans-serif;
-    font-size: larger;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: x-large;
     text-align: center;
     margin-bottom: 20px;
 }
 
 .hero-section {
     background-color: rgba(255, 255, 255, 0.15);
+    font-family: cursive;
     font-size: 120%;
     text-align: center;
+    text-shadow: 2px 2px 4px black;
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
@@ -43,7 +45,7 @@ nav ol {
 }
 
 nav ol li {
-    background-color: lime;
+    background-color: darkslateblue;
     border-radius: 10px;
     padding: 15px;
     margin: 10px;
@@ -52,7 +54,7 @@ nav ol li {
 }
 
 nav ol li:hover {
-    background-color: lightseagreen;
+    background-color: lightskyblue;
 }
 
 nav ol a {
