--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,8 +2,9 @@ body {
   font-family: Arial, sans-serif;
   color: white;
   background-image: url("../img/background.gif");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
-  background-position: center;
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
