--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/footer.css">
+    <title>Footer</title>
+    <link rel="stylesheet" href="/components/footer/footer.css">
 </head>
 
 <body>
     <footer>
         <div class="footer-nav">
-            <a href="/index.html">Ana Sayfa
-            </a>
-            <a href="../pages/about.html"> Hakkımda </a>
-            <a href="../pages/experience.html"> İş Deneyimi </a>
-            <a href="../pages/projects.html"> Projelerim </a>
-            <a href="../pages/contact.html"> İletişim </a>
+            <a href="../index.html">Ana Sayfa</a>
+            <a href="../about/index.html">Hakkımda</a>
+            <a href="../experience/index.html">İş Deneyimi</a>
+            <a href="../projects/index.html">Projelerim</a>
+            <a href="../contact/index.html">İletişim</a>
         </div>
         <div class="copyright">
             &copy; 2024-2025 Yusuf Sevinçhan | Kişisel Proje Portföyü. Tüm hakları saklıdır.
