--- a/components/game-preview/game-preview.html
+++ b/components/game-preview/game-preview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oyun Yükleniyor</title>
-    <link rel="stylesheet" href="/assets/css/game-placeholder.css" />
+    <link rel="stylesheet" href="./game-preview.css" />
   </head>
   <body>
     <img src="/assets/img/scratch-game-step1.jpg" alt="Oyun Yükleniyor" />
