--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
 body {
   background: linear-gradient(
-    60deg,
+    30deg,
     #1e3a8a,
     #2563eb,
     #4f46e5,
@@ -19,9 +19,12 @@ header {
   font-size: 1.2em;
 }
 
-p {
+h3 {
   font-size: 1.3em;
-  text-align: left;
+}
+
+p {
+  font-size: 1.2em;
 }
 
 table {
@@ -33,22 +36,23 @@ th,
 td {
   text-align: left;
   font-size: large;
-  color: black;
+  color: white;
   padding: 10px;
-  border: 1px solid black;
+  border: 1px solid #1e3a8a;
 }
 
 th {
-  background-color: lightgreen;
+  background-color: #1d4ed8;
   font-size: large;
 }
 
 tr {
-  background-color: lightskyblue;
+  background-color: #3b82f6;
 }
 
 tr:hover {
-  background-color: blueviolet;
+  background-color: #4f46e5;
+  transition: background-color 0.3s ease;
 }
 
 /* Classes */
@@ -66,13 +70,13 @@ tr:hover {
   border: 5px double skyblue;
 }
 
-.programming-languages li {
+.programming-skills li {
   list-style-type: none;
   display: inline-block;
   margin: 10px;
 }
 
-.programming-languages li img {
+.programming-skills li img {
   width: 90px;
   height: 90px;
 }
@@ -86,18 +90,18 @@ tr:hover {
   margin-bottom: 50px;
 }
 
-.social-links a {
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 30px;
-  font-weight: 600;
-  text-decoration: none;
-  cursor: alias;
+.social-links div {
+  display: inline-block;
+  margin: 20px;
 }
 
-.social-links i {
-  font-size: 50px;
-  margin-bottom: 20px;
+.social-links a {
+  pointer-events: auto;
+}
+
+.social-links img {
+  width: 60px;
+  height: 60px;
 }
 
 @media (max-width: 768px) {
@@ -107,11 +111,15 @@ tr:hover {
   }
 
   header {
-    font-size: 1.2em;
+    font-size: 1.3em;
+  }
+
+  h3 {
+    font-size: 1.4em;
   }
 
   p {
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 0 5px;
   }
 
@@ -122,7 +130,7 @@ tr:hover {
   th,
   td {
     padding: 8px;
-    font-size: 0.9em;
+    font-size: 1em;
   }
 
   /* Classes */
@@ -138,11 +146,15 @@ tr:hover {
     border-width: 3px;
   }
 
-  .programming-languages li {
+  .programming-skills {
+    margin: 0;
+  }
+
+  .programming-skills li {
     margin: 5px;
   }
 
-  .programming-languages li img {
+  .programming-skills li img {
     width: 60px;
     height: 60px;
   }
@@ -162,11 +174,11 @@ tr:hover {
   }
 
   .social-links a {
-    font-size: 1em;
+    font-size: 1.2em;
   }
 
-  .social-links i {
-    font-size: 30px;
-    margin-bottom: 10px;
+  .social-links img {
+    width: 40px;
+    height: 40px;
   }
 }
