--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,21 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Trebuchet+MS:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Trebuchet+MS:wght@400;700&display=swap");
 body {
   font-family: "Montserrat", sans-serif;
   color: white;
-  background-image: url("../img/background.gif");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+#background-video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+  background-size: cover;
 }
 
 header {
   font-family: "Trebuchet MS", sans-serif;
   text-align: center;
-  font-size: 1.2em;
-  margin-bottom: 20px;
+  font-size: 1.3em;
+  margin-bottom: 50px;
 }
 
 .hero-section {
@@ -79,7 +87,7 @@ header {
 /* Mobile Styles */
 @media (max-width: 768px) {
   header {
-    font-size: large;
+    font-size: 1.1em;
     margin-bottom: 15px;
     padding: 10px;
   }
@@ -95,11 +103,6 @@ header {
     margin: 20px;
     padding: 15px;
     border-radius: 8px;
-  }
-
-  .game-section h1 {
-    font-size: large;
-    margin-top: 0;
   }
 
   .game-section button {
