Implement responsive design, enhance UI, and improve performance

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -25,12 +25,12 @@ header {
 }
 
 .contact-info a {
-  color: teal;
+  color: darkcyan;
   cursor: alias;
 }
 
 .contact-info a:hover {
-  color: tomato;
+  color: darkslategray;
 }
 
 #suggestion-section {
