--- a/components/game-preview/game-preview.html
+++ b/components/game-preview/game-preview.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./game-preview.css" />
   </head>
   <body>
-    <img src="/assets/img/scratch-game-step1.jpg" alt="Oyun Yükleniyor" />
+    <img src="/assets/img/scratch-game-step1.webp" alt="Oyun Yükleniyor" />
   </body>
 </html>
