--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Yusuf Sevinçhan'ın kişisel proje portföyü. Hakkımda, iş deneyimi, projeler ve iletişim bilgileri.">
+    <meta name="keywords" content="Yusuf Sevinçhan, kişisel portföy, projeler, iş deneyimi, iletişim">
+    <meta name="author" content="Yusuf Sevinçhan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
     <link rel="stylesheet" href="/components/footer/footer.css">
