--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,4 +1,3 @@
-
 footer {
   background-color: transparent;
   font-family: "Courier New", Courier, monospace;
@@ -29,6 +28,7 @@ footer {
   color: var(--text-color);
   cursor: alias;
   font-weight: bold;
+  padding: 10px; /* Increase padding */
 }
 
 .footer-nav a:hover {
@@ -43,61 +43,63 @@ footer {
 /* Tablet Styles */
 @media (max-width: 768px) {
   footer {
-      border-width: 2px;
-      padding: 8px;
+    border-width: 2px;
+    padding: 8px;
   }
 
   .footer-nav {
-      font-size: 1.1em;
+    font-size: 1.1em;
   }
 
   .footer-nav a:not(:last-child)::after {
-      margin: 0 5px;
-      content: " |";
+    margin: 0 5px;
+    content: " |";
   }
 
   .footer-nav a {
-      margin: 0 5px;
+    margin: 0 5px;
+    padding: 12px;
   }
 
   .footer-nav a:hover {
-      /* dont change hover color on tablet */
-      color: var(--text-color);
+    /* don't change hover color on tablet */
+    color: var(--text-color);
   }
 
   .copyright {
-      font-size: 0.9em;
-      text-align: center;
-      margin-top: 10px;
+    font-size: 0.9em;
+    text-align: center;
+    margin-top: 10px;
   }
 }
 
 /* Mobile Styles */
 @media (max-width: 480px) {
   footer {
-      border-width: 1px;
-      padding: 5px;
+    border-width: 1px;
+    padding: 5px;
   }
 
   .footer-nav {
-      font-size: 1em;
+    font-size: 1em;
   }
 
   .footer-nav a:not(:last-child)::after {
-      margin: 0 3px;
-      content: " |";
+    margin: 0 3px;
+    content: " |";
   }
 
   .footer-nav a {
-      margin: 0 3px;
+    margin: 0 3px;
+    padding: 15px;
   }
 
   .footer-nav a:hover {
-      /* dont change hover color on mobile */
-      color: var(--text-color);
+    /* don't change hover color on mobile */
+    color: var(--text-color);
   }
 
   .copyright {
-      font-size: 0.8em;
+    font-size: 0.8em;
   }
 }
