--- a/components/navigation/navigation.html
+++ b/components/navigation/navigation.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation</title>
+    <meta name="description"
+        content="Kişisel portföy web sitesi. Ana sayfa, hakkımda, iş deneyimi, projeler ve iletişim sayfalarını içerir.">
+    <meta name="keywords" content="portföy, kişisel web sitesi, iş deneyimi, projeler, iletişim">
+    <meta name="author" content="Yusuf">
     <style>
         nav {
             background: rgba(255, 255, 255, 0.6);
@@ -15,11 +19,10 @@
 
         #nav-menu {
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: space-around;
             background: rgba(255, 255, 255, 0.7);
             border-radius: 30px;
-            margin: 30px;
+            margin: 30px 90px;
             padding: 10px;
         }
 
@@ -31,7 +34,7 @@
             border: none;
             border-radius: 15px;
             font-family: "Roboto", sans-serif;
-            font-size: 1.3em;
+            font-size: 1.4em;
             font-weight: bold;
             text-decoration: none;
             transition: background-color 0.3s ease;
@@ -61,6 +64,10 @@
                 text-align: center;
                 width: 100%;
                 box-sizing: border-box;
+            }
+
+            .nav-link:hover {
+                background-color: darkmagenta;
             }
         }
     </style>
